# agent-sessions

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agent_sessions/: __init__.py  cache.py  cli.py  data_store.py  indexer.py  model.py  normalize.py  query.py  server.py  telemetry.py  util.py
agent_sessions/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py  ingest.py  logging.py  registry.py
agent_sessions/static/: index.html  session.html  style.css
agent_sessions/static/js/: api.js  index-data.js  index-filters.js  index-page.js  index-render.js  session-page.js  state.js  ui.js
tests/: conftest.py  test_cache.py  test_data_store.py  test_indexer.py  test_metadata_cache_restart_integration.py  test_normalize.py  test_providers.py  test_query.py  test_registry.py  test_server.py  test_util.py
tests/fixtures/: codex_tool_result.jsonl
